# TheJury

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  TODO.md  lightroom-ppa-codex-day1-bootstrap.md  lightroom-ppa-plugin-bootstrap.md  ppa_service.toml.example
.github/: release-body.md
.github/workflows/: release.yml
cmake/: Info.lua.in  PluginVersion.lua.in  Version.hpp.in
docs/: api.md  architecture.md  metadata.md
examples/: request.sample.json  response.sample.json
plugin/PpaCritique.lrplugin/: CritiqueMenu.lua  Info.lua  Json.lua  MetadataDefinition.lua  MetadataFields.lua  PluginDisable.lua  PluginEnable.lua  PluginInfoProvider.lua  PluginInit.lua  PluginShutdown.lua  PluginVersion.lua  ResultDialog.lua  ServiceClient.lua  ServiceLifecycle.lua  ShowCritiqueDetails.lua  Utils.lua
service/: CMakeLists.txt
service/include/ppa/: model.hpp
service/include/ppa/aggregate/: SimpleAggregateEngine.hpp
service/include/ppa/api/: ApiError.hpp  Handlers.hpp
service/include/ppa/config/: ServiceConfig.hpp
service/include/ppa/core/: CritiqueService.hpp  engines.hpp
service/include/ppa/preflight/: StubPreflightEngine.hpp
service/include/ppa/runtime/: RuntimeManager.hpp  RuntimeSupport.hpp
service/include/ppa/semantic/: DisabledSemanticProvider.hpp  OllamaClient.hpp  OllamaProvider.hpp  SemanticProviderFactory.hpp
service/src/: host_main.cpp  main.cpp
service/src/api/: Handlers.cpp
service/src/config/: ServiceConfig.cpp
service/src/runtime/: RuntimeManager.cpp  RuntimeSupport.cpp
service/src/semantic/: OllamaClient.cpp
service/tests/: service_tests.cpp
